@@ -23,3 +23,4 @@ OpenAPI::Modern = 0.040
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
+PadWalker = 0 ; for detecting cycles in closures in tests
